[package]
name = "waifuvault"
version = "0.2.1"
edition = "2021"
authors = ["Graham Keenan graham.keenan@outlook.com"]
license = "MIT OR Apache-2.0"
description = "SDK for interacting with the Waifu Vault API"
readme = "README.md"
homepage = "https://waifuvault.moe/"
repository = "https://github.com/waifuvault/waifuVault-rust-api"
documentation = "https://docs.rs/waifuvault"
keywords = ["cli", "api", "file-storage"]
categories = ["development-tools", "filesystem"]

[dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.11.24", features = ["multipart", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"
sha1 = "0.10.6"
rand = "0.8.5"
hex = "0.4.3"
